# BRUNA

bruna_os/: .gitignore  Cargo.toml  README.md
bruna_os/src/: lib.rs
bruna_os/src/comms/: mod.rs
bruna_os/src/drivers/: mod.rs
bruna_os/src/hal/: common.rs  gpio.rs  mod.rs  network.rs  radio.rs  serial.rs  timers.rs
bruna_os/src/kernel/: discovery.rs  ipc.rs  memory.rs  mod.rs  process.rs  registry.rs  scheduler.rs  thread.rs
bruna_os/src/services/: mod.rs
bruna_os/src/services/navigation_service/: mod.rs
bruna_os/src/services/onboarding_service/: mod.rs
bruna_os/src/services/swarm_manager/: mod.rs
bruna_os/src/utils/: mod.rs
src/: functionalities.md
src/Util/Enums/: WingType.java
src/feedback/: Feed.java
src/model/: Ear.java  Eye.java  Group.java  Head.java  Health.java  Node.java  Swarm.java  Vertex.java
src/navigation/: Location.java
src/patterns/: DefaultPattern.java  Pattern.java
src/registration/: registerationBuilder.java
